@@ -3,8 +3,8 @@ Type: Package
 Maintainer: Steven E. Pav <shabbychef@gmail.com>
 Authors@R: c(person(c("Steven", "E."), "Pav", role=c("aut","cre"), 
     email="shabbychef@gmail.com"))
-Version: 0.2.0.1000
-Date: 2017-03-15
+Version: 0.2.0.9000
+Date: 2017-03-17
 License: LGPL-3
 Title: Baumgartner Weiss Schindler Test of Equal Distributions
 BugReports: https://github.com/shabbychef/BWStest/issues
